# mega-evm

./: .gitbook.yaml  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .mise.toml  .prettierignore  AGENTS.md  ARCH.md  CONVENTIONS.md  Cargo.toml  DEV.md  DEVELOPER_GUIDE.md  LICENSE-MIT  MiniRex.md  README.md  REVIEW.md  SECURITY.md  check_constants.rs  check_recovery.rs  lychee.toml  rust-toolchain.toml  test_beneficiary_gas.sh
crates/mega-evm/: Cargo.toml  README.md  build.rs
crates/mega-evm/benches/: attack_replay.rs  block_bench.rs  comp_cost.rs  ctt.rs  enriched_tx.rs  keccak256.rs  mega_bench.rs  revm_bench.rs  transact.rs
crates/mega-evm/benches/common/: baseline_adapters.rs  mod.rs  subject.rs  workload.rs
crates/mega-evm/benches/fixtures/: known_attack_deploy.json
crates/mega-evm/examples/: beneficiary_access_detection.rs  beneficiary_access_tracking.rs  beneficiary_gas_enforcement.rs  block_env_tracking.rs
crates/mega-evm/src/: AGENTS.md  block.rs  constants.rs  context.rs  evm.rs  gas.rs  gas_limit_enforcement_inspector.rs  handler.rs  host.rs  instructions.rs  lib.rs  limit.rs  precompiles.rs  result.rs  spec.rs  system_tx.rs  types.rs
crates/mega-evm/src/access/: AGENTS.md  block.rs  mod.rs  oracle.rs  tracker.rs  volatile.rs
crates/mega-evm/src/block/: AGENTS.md  chain.rs  eips.rs  executor.rs  factory.rs  hardfork.rs  helpers.rs  limit.rs  mod.rs  result.rs
crates/mega-evm/src/evm/: AGENTS.md  context.rs  execution.rs  factory.rs  host.rs  instructions.rs  interfaces.rs  limit.rs  mod.rs  precompiles.rs  precompiles_map.rs  result.rs  spec.rs  state.rs
crates/mega-evm/src/limit/: AGENTS.md  compute_gas.rs  data_size.rs  frame_limit.rs  kv_update.rs  limit.rs  mod.rs  state_growth.rs  storage_call_stipend.rs
crates/mega-evm/src/sandbox/: error.rs  execution.rs  mod.rs  state.rs  state_merge.rs  tx.rs
crates/mega-evm/src/system/: AGENTS.md  control.rs  deploy.rs  intercept.rs  keyless_deploy.rs  limit_control.rs  mod.rs  oracle.rs  remaining_compute_gas.rs  sequencer_registry.rs  tx.rs
crates/mega-evm/src/test_utils/: bytes.rs  database.rs  evm.rs  inspector.rs  inspectors.rs  mod.rs  opcode_gen.rs
crates/mega-evm/src/tests/: gas_limit_enforcement_test.rs
crates/mega-evm/system-contracts/: foundry.toml
crates/mega-evm/system-contracts/artifacts/: Oracle.json
crates/mega-evm/system-contracts/script/: OracleBytecode.s.sol
crates/mega-evm/system-contracts/src/: Oracle.sol
crates/mega-evm/system-contracts/test/: Oracle.t.sol
crates/mega-evm/tests/: access_beneficiary_balance.rs  additional_limit.rs  block_env_access_tracking.rs  block_env_gas_limit.rs  block_executor.rs  compute_gas_limit.rs  contract_size_limit.rs  data_limit.rs  deposit.rs  deposit_da_exemption.rs  disallow_selfdestruct.rs  evm_state.rs  execution_mutation.rs  gas.rs  gas_limit_enforcement.rs  mega_system_transaction.rs  oracle.rs  tx_data_and_kv_update_limit.rs
crates/mega-evm/tests/block_executor/: accessed_block_hashes.rs  block_limits.rs  deposit_da_exemption.rs  inspector.rs  main.rs  sequencer_registry.rs  trait_factory_runtime_limits.rs
crates/mega-evm/tests/equivalence/: evm_state.rs  main.rs
crates/mega-evm/tests/mini_rex/: access_beneficiary_balance.rs  block_env_access_tracking.rs  block_env_gas_limit.rs  compute_gas_limit.rs  contract_size_limit.rs  db_error.rs  disallow_selfdestruct.rs  gas.rs  main.rs  mega_system_transaction.rs  opcode_wrappers.rs  oracle.rs  state_growth_limit.rs  tx_data_and_kv_update_limit.rs
crates/mega-evm/tests/mutation/: access_evm.rs  block.rs  constants.rs  external_exec.rs  limit.rs  main.rs
crates/mega-evm/tests/rex/: floor_gas.rs  intrinsic_gas.rs  main.rs  oracle.rs  storage_gas.rs  storage_gas_opcodes.rs
crates/mega-evm/tests/rex1/: compute_gas_reset.rs  main.rs
crates/mega-evm/tests/rex2/: keyless_deploy.rs  main.rs  oracle_hint.rs  selfdestruct.rs
crates/mega-evm/tests/rex3/: keyless_deploy.rs  main.rs  oracle_gas_limit.rs  system_address.rs
crates/mega-evm/tests/rex4/: access_control.rs  beneficiary_detention.rs  create_safety.rs  deployment.rs  eip7702_delegation_cycle.rs  frame_limits.rs  frame_state_growth.rs  gas_detention.rs  intrinsic_limit_bypass.rs  keyless_deploy.rs  limit_control.rs  main.rs  remaining_compute_gas.rs  selfdestruct_state_growth.rs  storage_call_stipend.rs  storage_gas_stipend.rs
crates/mega-evm/tests/rex5/: apply_pending_changes_gas_budget.rs  call_too_deep_guard.rs  create_atomicity.rs  (+25 more)
crates/mega-state-test/: AGENTS.md  Cargo.toml
crates/mega-state-test/src/: lib.rs  runner.rs  utils.rs
crates/mega-state-test/tests/: dump_roundtrip.rs  hardening.rs  replay_corpus.rs
crates/revm-compat/: Cargo.toml
crates/revm-compat/src/: lib.rs
crates/state-test/: AGENTS.md  Cargo.toml  README.md
crates/state-test/src/: compare.txt  compare_failed.txt  lib.rs  main.rs  runner.rs  utils.rs
crates/state-test/tests/: bench_fixture.rs  cli_exit.rs  dump_roundtrip.rs  replay_corpus.rs
crates/system-contracts/: .gitignore  AGENTS.md  Cargo.toml  build.rs  foundry.toml  remappings.txt
crates/system-contracts/artifacts/: .gitignore  KeylessDeploy-1.0.0.json  KeylessDeploy-latest.json  MegaAccessControl-1.0.0.json  MegaLimitControl-1.0.0.json  MegaLimitControl-latest.json  Oracle-1.0.0.json  Oracle-1.1.0.json  Oracle-2.0.0.json  Oracle-latest.json  RemainingComputeGas-1.0.0.json  RemainingComputeGas-latest.json  SequencerRegistry-1.0.0.json  SequencerRegistry-2.0.0.json  SequencerRegistry-latest.json
crates/system-contracts/contracts/: KeylessDeploy.sol  MegaAccessControl.sol  MegaLimitControl.sol  Oracle.sol  RemainingComputeGas.sol  SequencerRegistry.sol
crates/system-contracts/scripts/: KeylessDeployBytecode.s.sol  MegaLimitControlBytecode.s.sol  OracleBytecode.s.sol  RemainingComputeGasBytecode.s.sol  SequencerRegistryBytecode.s.sol
crates/system-contracts/src/: lib.rs
crates/system-contracts/test/: Oracle.t.sol  SequencerRegistry.t.sol
crates/system-contracts/tests/: docs_bytecode_consistency.rs  generated_self_consistency.rs  sequencer_registry_storage_layout.rs
(+265 files in other folders)
