
[workspace]
members = ["bin/mega-evme", "crates/mega-evm", "crates/state-test"]
default-members = ["crates/mega-evm", "crates/state-test", "bin/mega-evme"]
exclude = []

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"
[workspace.package]
version = "1.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
homepage = "https://paradigmxyz.github.io/reth"
repository = "https://github.com/paradigmxyz/reth"
exclude = [".github/"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "allow" # TODO: https://github.com/rust-lang/rust-clippy/issues/14020
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

[workspace.dependencies]
# megaeth 
mega-evm = { path = "./crates/mega-evm", default-features = false }
salt = { git = "https://github.com/megaeth-labs/salt.git", branch = "abel/feat/no-std", default-features = false }
state-test = { path = "./crates/state-test" }

# revm
op-revm = { version = "8.1.0", default-features = false }
revm = { version = "27.1.0", default-features = false }
revm-inspectors = { version = "0.27.1", default-features = false }

# alloy
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-evm = { version = "0.15.0", default-features = false }
alloy-hardforks = { version = "0.2.7", default-feautres = false }
alloy-op-evm = { version = "0.15.0", default-features = false }
alloy-op-hardforks = { version = "0.2.2", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-rpc-types-trace = { version = "1.0.22", default-features = false }
alloy-serde = { version = "1.0.23", default-features = false }
alloy-sol-types = { version = "1.0.23", default-features = false }
op-alloy-consensus = { version = "0.18.12", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }

# misc
auto_impl = { version = "1.3", default-features = false }
bitflags = { version = "2.6", default-features = false }
clap = { version = "4", default-features = false, features = ["derive"] }
criterion = { version = "0.5", default-features = false }
delegate = { version = "0.13", default-features = false }
derive_more = { version = "2", default-features = false }
getrandom = { version = "0.3", default-features = false }
hash-db = { version = "0.15", default-features = false }
hex = { version = "0.4", default-features = false }
indicatif = { version = "0.17", default-features = false }
k256 = { version = "0.13.4", default-features = false }
once_cell = { version = "1.21", default-features = false }
plain_hasher = { version = "0.2", default-features = false }
rand = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
thiserror = { version = "2.0", default-features = false }
triehash = { version = "0.8", default-features = false }
walkdir = { version = "2.5", default-features = false }

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "full"
split-debuginfo = "unpacked"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
