[package]
name = "mega-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The evm tailored for the MegaETH"

[lints]
workspace = true

[dependencies]
# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-op-evm.workspace = true
alloy-op-hardforks.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
op-alloy-consensus.workspace = true
op-alloy-flz.workspace = true
op-revm = { workspace = true, features = ["dev", "serde", "kzg-rs"] }

# revm
revm = { workspace = true, features = ["dev", "serde", "kzg-rs"] }

# megaeth
salt.workspace = true

# misc
auto_impl.workspace = true
bitflags.workspace = true
delegate.workspace = true
derive_more.workspace = true
once_cell.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
hex.workspace = true
mega-evm = { path = ".", features = ["test-utils"] }
rand = { workspace = true, features = ["thread_rng"] }
revm-inspectors.workspace = true
serde_json.workspace = true
sha2.workspace = true

[features]
default = ["std", "revm/default", "op-revm/default"]
std = ["revm/std", "op-revm/std"]
test-utils = []

[[bench]]
name = "transact"
harness = false

[[bench]]
name = "comp_cost"
harness = false

[[bench]]
name = "ctt"
harness = false
