[package]
name = "mega-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The evm tailored for the MegaETH"
readme = "README.md"

[lints]
workspace = true

[dependencies]
# alloy
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-hardforks.workspace = true
alloy-op-evm.workspace = true
alloy-op-hardforks.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
op-alloy-consensus.workspace = true
op-alloy-flz.workspace = true
op-revm = { workspace = true, features = ["dev", "serde", "kzg-rs"] }

# revm
revm = { workspace = true, features = ["dev", "serde", "kzg-rs"] }

# megaeth
mega-system-contracts = { workspace = true, default-features = false }

# misc
auto_impl.workspace = true
bitflags.workspace = true
delegate.workspace = true
derive_more.workspace = true
once_cell.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
# Enable criterion's HTML reports (per-group violin plots + top-level summary
# under `target/criterion/report/`). The workspace pins `default-features = false`,
# so we have to opt into `plotters` (SVG rendering) and `cargo_bench_support`
# (preserved from default) alongside `html_reports`.
criterion = { workspace = true, features = ["html_reports", "plotters", "cargo_bench_support"] }
hex.workspace = true
mega-evm = { path = ".", features = ["test-utils"] }
op_revm_latest = { package = "op-revm", version = "20.0.0", default-features = false, features = ["dev", "serde", "std"] }
rand = { workspace = true, features = ["thread_rng"] }
revm-inspectors = { workspace = true, features = ["std"] }
# Pin to the revm version `op_revm_latest` depends on so both `_latest` baselines share one revm tree.
revm_latest = { package = "revm", version = "38.0.0", default-features = false, features = ["dev", "serde", "std"] }
serde_json.workspace = true
sha2.workspace = true

[features]
default = ["std", "revm/default", "op-revm/default"]
std = ["revm/std", "op-revm/std", "revm/alloydb", "mega-system-contracts/std"]
test-utils = []

[[bench]]
name = "block_bench"
harness = false

[[bench]]
name = "comp_cost"
harness = false

[[bench]]
name = "ctt"
harness = false

[[bench]]
name = "mega_bench"
harness = false

[[bench]]
name = "revm_bench"
harness = false

[[bench]]
name = "transact"
harness = false
