[package]
name = "revm-compat"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Revm compatibility layer for mega-evm"

[dependencies]
revm = { workspace = true }
revm-inspectors = { workspace = true }
op-revm = { workspace = true }
alloy-evm = { workspace = true }
alloy-op-evm = { workspace = true }
