[package]
name = "state-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "The utility to run Ethereum State Tests for mega-evm"

[lints]
workspace = true

[[bin]]
name = "state-test"
path = "src/main.rs"

[dependencies]
mega-evm.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# revm 
revm.workspace = true

# misc
clap.workspace = true
hash-db.workspace = true
indicatif.workspace = true
k256.workspace = true
plain_hasher.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
triehash.workspace = true
walkdir.workspace = true