[package]
name = "state-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "CLI to run Ethereum State Tests for mega-evm"
# The runner library lives in the published `mega-state-test` crate; this CLI is
# a thin front-end and is not published.
publish = false

[lints]
workspace = true

[[bin]]
name = "state-test"
path = "src/main.rs"

[dependencies]
mega-evm = { workspace = true, features = ["default", "test-utils"] }
mega-state-test.workspace = true

# misc
clap = { workspace = true, features = ["default"] }
serde_json.workspace = true
