[package]
name = "system-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "System contracts for the MegaETH EVM"

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true

[build-dependencies]
alloy-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
